--- a/frontend/src/components/App.css
+++ b/frontend/src/components/App.css
@@ -3,9 +3,11 @@
   width: 100vw;
   height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 
   color: white;
+  text-align: center;
 }
 
